finishing rtree gpu benchmark part

--- a/manuscript.bib
+++ b/manuscript.bib
@@ -366,6 +366,12 @@
   publisher = {Elsevier}
 }
 
+@misc{gilliesRtreeSpatialIndexing,
+  title = {Rtree: {{Spatial}} Indexing for {{Python GIS}}},
+  shorttitle = {Rtree},
+  author = {Gillies, Sean}
+}
+
 @inproceedings{gilpin2018explaining,
   title = {Explaining Explanations: {{An}} Overview of Interpretability of Machine Learning},
   booktitle = {2018 {{IEEE}} 5th {{International Conference}} on Data Science and Advanced Analytics ({{DSAA}})},
@@ -473,6 +479,15 @@
   number = {29},
   pages = {21771--21795},
   publisher = {Springer}
+}
+
+@inproceedings{kouiroukidis2011effects,
+  title = {The Effects of Dimensionality Curse in High Dimensional Knn Search},
+  booktitle = {2011 15th Panhellenic Conference on Informatics},
+  author = {Kouiroukidis, Nikolaos and Evangelidis, Georgios},
+  year = 2011,
+  pages = {41--45},
+  publisher = {IEEE}
 }
 
 @inproceedings{le2017gogp,
@@ -616,6 +631,14 @@
   publisher = {Taylor \& Francis}
 }
 
+@article{paszke2019pytorch,
+  title = {Pytorch: {{An}} Imperative Style, High-Performance Deep Learning Library},
+  author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and others},
+  year = 2019,
+  journal = {Advances in neural information processing systems},
+  volume = {32}
+}
+
 @article{pedregosaScikitlearnMachineLearning2012,
   title = {Scikit-Learn: {{Machine Learning}} in {{Python}}},
   author = {Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and M{\"u}ller, Andreas and Nothman, Joel and Louppe, Gilles and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, {\'E}douard},
@@ -709,6 +732,15 @@
   abstract = {This tutorial introduces the reader to Gaussian process regression as an expressive tool to model, actively explore and exploit unknown functions. Gaussian process regression is a powerful, non-parametric Bayesian approach towards regression problems that can be utilized in exploration and exploitation scenarios. This tutorial aims to provide an accessible introduction to these techniques. We will introduce Gaussian processes which generate distributions over functions used for Bayesian non-parametric regression, and demonstrate their use in applications and didactic examples including simple regression problems, a demonstration of kernel-encoded prior assumptions and compositions, a pure exploration scenario within an optimal design framework, and a bandit-like exploration--exploitation scenario where the goal is to recommend movies. Beyond that, we describe a situation modelling risk-averse exploration in which an additional constraint (not to sample below a certain threshold) needs to be accounted for. Lastly, we summarize recent psychological experiments utilizing Gaussian processes. Software and literature pointers are also provided.},
   langid = {english},
   keywords = {Active learning,Bandit problems,Exploration-exploitation,Gaussian process regression}
+}
+
+@article{scikit-learn,
+  title = {Scikit-Learn: {{Machine}} Learning in {{Python}}},
+  author = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+  year = 2011,
+  journal = {Journal of Machine Learning Research},
+  volume = {12},
+  pages = {2825--2830}
 }
 
 @article{seeger2004gaussian,
